<resources>
    <string name="app_name">Papierflieger</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_subtitle">Explore new world with us and let\n yourself get an amazing experiences</string>
    <string name="text_email">Email Address</string>
    <string name="text_password">Password</string>
    <string name="text_fullname">Full Name</string>
    <string name="text_username">Username</string>
    <string name="text_confirm_password">Confirm Password</string>
    <string name="text_welcome">Welcome</string>
    <string name="text_viewall">View All</string>
    <string name="text_roundtrip">Round trip?</string>
    <string name="text_ordernumber">Order Number</string>
    <string name="text_purchase_time">Purchase Time</string>
    <string name="text_payment_method">Payment Method</string>
    <string name="text_pricing_detail">Pricing Detail</string>
    <string name="text_home">Home</string>
    <string name="text_transaction">Transaction</string>
    <string name="text_setting">Setting</string>
    <string name="text_payment">Payment</string>
    <string name="text_location">Location</string>
    <string name="text_fly">Where we fly today?</string>
    <string name="text_favorite_destination">Favorite Destination</string>
    <string name="text_favorite">Favorite</string>
    <string name="text_new">New This Year</string>
    <string name="text_promotion">Promotion Flight</string>
    <string name="text_already">Already have account?</string>
    <string name="text_signin">Sign In</string>
    <string name="text_banner_signin">Sign in to your account</string>
    <string name="text_forgot">Forgot the Password?</string>
    <string name="text_reset">Reset password</string>
    <string name="text_continue">Continue</string>
    <string name="text_or_continue">Or continue with</string>
    <string name="text_dont_have">Don\'t have an account?</string>
    <string name="text_signup">Sign Up</string>
    <string name="text_banner_signup">Join us and get\nyour next journey</string>
    <string name="text_search">Search</string>
    <string name="text_passenger">Passenger</string>
    <string name="text_date">Mon, 21 Nov 2022</string>
    <string name="text_arrival">Arrival</string>
    <string name="text_departure">Departure</string>
    <string name="text_search_flight">Search Your Flight</string>
    <string name="text_price">Price</string>
    <string name="text_transaction_success">Transaction Successful</string>
    <string name="text_transaction_pending">Transaction Pending</string>
    <string name="text_ticket_issued">E-ticket Has Been Issued</string>
    <string name="text_detail_transaction">Detail Transaction</string>
    <string name="text_history_transaction">History Transaction</string>
    <string name="text_transaction_not_found">Transaction not Found</string>
    <string name="text_profile">Profile</string>
    <string name="text_account">Account and Security</string>
    <string name="text_account_information">Account Information</string>
    <string name="text_password_security">Password and Security</string>
    <string name="text_preference">Preference</string>
    <string name="text_country">Country</string>
    <string name="text_currency">Currency</string>
    <string name="text_language">Language</string>
    <string name="text_application">Application</string>
    <string name="text_personal">Personal Information</string>
    <string name="text_change">Change</string>
    <string name="text_title">Title</string>
    <string name="text_address">Address</string>
    <string name="text_date_birth">Date of Birth</string>
    <string name="text_nationality">Nationality</string>
    <string name="text_save">Save</string>
    <string name="text_regency">Regency</string>
    <string name="text_province">Province</string>
    <string name="text_phone_number">+62 85987166353</string>
    <string name="text_category_seat">Economy</string>
    <string name="text_time">00:00</string>
    <string name="text_person">/person</string>
    <string name="text_duration">0m</string>
    <string name="text_flight_stop">Direct</string>
    <string name="text_lowest_price">Guaranteed Lowest Price</string>
    <string name="text_discount">Include Discount</string>
    <string name="text_customer_data">Customer Data</string>
    <string name="text_passenger_data">Passenger Data</string>
    <string name="text_tap_detail">Tap to view product details</string>
    <string name="text_traveler_detail">Traveler Detail</string>
    <string name="text_continue_login">Login to continue the transaction</string>
    <string name="text_fill_customer_data">Fill the customer data</string>
    <string name="text_required">*</string>
    <string name="text_flight_facilities">Flight Facilities</string>
    <string name="text_luggage">Luggage</string>
    <string name="text_continue_pay">Continue to Pay</string>
    <string name="text_identity">Identity Card Number</string>
    <string name="text_warning_identity">Make sure the passenger\'s name is exactly as written on the government-issued ID. Avoid any mistakes, as airlines do not allow name corrections after booking.</string>
    <string name="text_passport">Passport Number</string>
    <string name="text_issuing_country">Issuing Country</string>
    <string name="text_expiration_date">Expiration Date</string>
    <string name="text_e_ticket">E-Flight Tickets</string>
    <string name="text_pnr">Airline Booking Code (PNR)</string>
    <string name="text_ticket_code">Code</string>
    <string name="text_name">Name Passenger</string>
    <string name="text_number">1.</string>
    <string name="text_other_ticket">Other Tickets</string>
    <string name="text_payment_confirmation">Payment Confirmation</string>
    <string name="text_flight_detail">Flight Details</string>
    <string name="text_total_price">Total Price</string>
    <string name="text_bank_name">Bank Name</string>
    <string name="text_name_payment">Name</string>
    <string name="text_number_account">Number Account</string>
    <string name="text_amount_money">Amount of Money</string>
    <string name="text_pay">Pay</string>
    <string name="text_payment_status">Payment Status</string>
    <string name="text_payment_success">Payment Successful</string>
    <string name="text_find">Find hundreds of other Paperflies\nflights now!</string>
    <string name="text_ticket_detail">Ticket Details</string>
    <string name="text_income_today">Income Today</string>
    <string name="text_overall_income">Overall Total Income</string>
    <string name="text_value">0</string>
    <string name="text_user_today">New User Today</string>
    <string name="text_total_user">Total Users</string>
    <string name="text_order_today">New Order Today</string>
    <string name="text_total_order">Total Orders</string>
    <string name="text_dashboard">Dashboard</string>
    <string name="text_ticket">Ticket</string>
    <string name="text_airplane">Airplane</string>
    <string name="text_airport">Airport</string>
    <string name="text_destination">Destination</string>
    <string name="text_logout">Logout</string>
    <string name="text_airplane_name">Airplane Name</string>
    <string name="text_airplane_code">Airplane Code</string>
    <string name="text_class">Class</string>
    <string name="text_airport_name">Airport Name</string>
    <string name="text_city">City</string>
    <string name="text_city_code">City Code</string>
    <string name="text_account_number">Account Number</string>
    <string name="text_account_name">Account Name</string>
    <string name="text_destination_name">Destination Name</string>
    <string name="text_description">Description</string>
    <string name="text_ticket_number">Ticket Number</string>
    <string name="text_departure_time">Departure Time</string>
    <string name="text_flight_from">Flight From</string>
    <string name="text_transit_arrival_time">Transit Arrival Time</string>
    <string name="text_transit_point">Transit Point</string>
    <string name="text_arrival_time">Arrival Time</string>
    <string name="text_flight_to">Flight To</string>
    <string name="text_departure_date">Departure Date</string>
    <string name="text_transit_departure_time">Transit Departure Time</string>
    <string name="text_arrival_date">Arrival Date</string>
    <string name="text_aircraft_type">Aircraft Type</string>
    <string name="text_ticket_type">Ticket Type</string>
    <string name="text_ticket_price">Ticket Price</string>
    <string name="text_destination_picture">Destination Picture</string>
    <string name="text_add_picture">Add Picture</string>
    <string name="text_next">Next</string>
    <string name="text_about">About</string>
    <string name="text_photos">Photos</string>
    <string name="text_book_now">Book Now</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_total_price_for">Total Price for</string>
    <string name="text_flight_preview">Flight Preview</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="text_delete">Delete</string>
    <string name="text_sure_delete">Are you sure you want to delete this?</string>
    <string name="text_transit">Transit?</string>
    <string name="text_idr">IDR</string>
    <string name="text_flight_type">Flight Type</string>
    <string name="text_flight_duration">Flight Duration</string>
    <string name="text_transit_duration">Transit Duration</string>
    <string name="text_wishlist">Wishlist</string>
    <string name="text_wishlist_not_found">Wishlist Not Found</string>
    <string name="text_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ac purus eget purus aliquam aliquam vel in eros. Donec semper porta tempus. Mauris eu metus at massa rutrum convallis. Donec in arcu commodo, bibendum sem vitae, facilisis nibh. Morbi ac nunc vel massa faucibus congue. Praesent ultricies est et ultricies malesuada. Nunc sollicitudin, est in pharetra accumsan, dolor dolor pharetra lorem, non rhoncus nibh nibh ac urna. Integer rutrum turpis sit amet nisl vehicula, non convallis magna pretium. Nullam at dolor vestibulum, ultrices massa elementum, lobortis elit. Aenean quis vehicula elit. Aenean ultricies orci sollicitudin facilisis porttitor.</string>
    <string name="text_order">Order</string>
    <string name="text_passenger_name">Passenger Name</string>
    <string name="text_trip">Trip</string>
    <string-array name="titles">

    </string-array>
</resources>