<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        app:showAsAction="ifRoom"
        android:title="@string/text_home" />

    <item
        android:id="@+id/historyFragment"
        android:icon="@drawable/ic_receipt"
        app:showAsAction="ifRoom"
        android:title="@string/text_transaction" />

    <item
        android:id="@+id/wishlistFragment"
        android:icon="@drawable/ic_favorite"
        app:showAsAction="ifRoom"
        android:title="@string/text_wishlist" />

    <item
        android:id="@+id/profileUserFragment"
        android:icon="@drawable/ic_setting"
        app:showAsAction="ifRoom"
        android:title="@string/text_setting" />

</menu>