<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white"
    tools:ignore="ContentDescription, SmallSp">

    <View
        android:id="@+id/view_header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_payment_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_payment_status"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_order_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_ordernumber"
        android:textColor="@color/white"
        android:textSize="8sp"
        android:layout_marginTop="1dp"
        app:layout_constraintStart_toStartOf="@id/tv_payment_status"
        app:layout_constraintTop_toBottomOf="@id/tv_payment_status" />

    <ImageView
        android:id="@+id/iv_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_payment_success"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_header"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/text_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_payment_success"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_payment" />

    <TextView
        android:id="@+id/text_payment_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_find"
        android:textSize="12sp"
        android:textAlignment="center"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_payment" />

    <View
        android:id="@+id/guideline_center"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintStart_toStartOf="@id/text_payment_detail"
        app:layout_constraintEnd_toEndOf="@id/text_payment_detail"
        app:layout_constraintBottom_toBottomOf="@id/text_payment_detail"/>

    <Button
        android:id="@+id/btn_ticket_detail"
        style="@style/Widget.Custom.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_ticket_detail"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="12sp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_center"
        app:layout_constraintTop_toBottomOf="@+id/text_payment_detail" />

    <Button
        android:id="@+id/btn_home"
        style="@style/Widget.Custom.Button.Outlined"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_home"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24sp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="@+id/guideline_center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_payment_detail" />

</androidx.constraintlayout.widget.ConstraintLayout>