<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white"
    tools:ignore="ContentDescription, SmallSp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/view_header"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:background="@color/transparant_color"
            android:src="@drawable/ic_back_arrow"
            android:layout_marginStart="24dp"
            android:layout_marginVertical="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/tv_payment_confirmation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_payment_confirmation"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/btn_back"
            app:layout_constraintTop_toTopOf="@id/btn_back" />

        <TextView
            android:id="@+id/tv_order_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_ordernumber"
            android:textColor="@color/white"
            android:textSize="8sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_back"
            app:layout_constraintStart_toStartOf="@id/tv_payment_confirmation"
            app:layout_constraintTop_toBottomOf="@id/tv_payment_confirmation" />

        <TextView
            android:id="@+id/text_flight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_flight_detail"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/btn_back"
            app:layout_constraintTop_toBottomOf="@+id/view_header" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_flight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/text_flight"
            tools:itemCount="2"
            tools:listitem="@layout/item_payment_flight_detail" />

        <TextView
            android:id="@+id/text_pricing_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_pricing_detail"
            android:textSize="14sp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="@+id/btn_back"
            app:layout_constraintTop_toBottomOf="@+id/rv_flight" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_pricing_detail"
            style="@style/Widget.Custom.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/text_pricing_detail">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tv_total_price_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_total_price"
                    android:textSize="12sp"
                    android:textStyle=""
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_total_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_price"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_passenger"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="2dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_total_price_title"
                    tools:itemCount="2"
                    tools:layout_editor_absoluteX="16dp"
                    tools:listitem="@layout/item_pricing_details_text" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/text_payment_method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_payment_method"
            android:layout_marginTop="16dp"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/btn_back"
            app:layout_constraintTop_toBottomOf="@+id/cv_pricing_detail" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_payment_method"
            style="@style/Widget.Custom.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/text_payment_method">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/tv_bank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_bank_name"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/ib_down"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/ib_down" />


                <TextView
                    android:id="@+id/tv_amount_money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_amount_money"
                    android:textSize="10sp"
                    android:layout_marginTop="4dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_bank" />

                <TextView
                    android:id="@+id/tv_amount_money_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_amount_money"
                    android:textSize="10sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_amount_money"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_amount_money" />

                <ImageButton
                    android:id="@+id/ib_down"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@color/transparant_color"
                    android:src="@drawable/ic_keyboard_arrow"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/dark_blue" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_pay"
                    style="@style/Widget.Custom.CardView.Pay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_amount_money_detail">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_pay"
                        android:textColor="@color/white"
                        android:textSize="10sp"/>

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/gap"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/btn_back"
            app:layout_constraintTop_toBottomOf="@+id/cv_payment_method" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>