<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="24dp"
    android:paddingVertical="4dp"
    tools:ignore="ContentDescription, SmallSp">

    <ImageView
        android:id="@+id/iv_airport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_airport"
        app:layout_constraintBottom_toBottomOf="@+id/tv_city"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_airport_name"
        app:tint="@color/dark_blue" />

    <TextView
        android:id="@+id/tv_airport_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:maxLines="1"
        android:text="@string/text_airport_name"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/materialCardView"
        app:layout_constraintStart_toEndOf="@+id/iv_airport"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/text_city"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_airport_name"
        app:layout_constraintStart_toStartOf="@+id/tv_airport_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_airport_name" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        style="@style/Widget.Custom.CardView.Change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_city_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_city_code"
            android:textColor="@color/dark_blue"
            android:textSize="10sp" />

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>