<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.Custom.CardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="40dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="24dp">

        <TextView
            android:id="@+id/tv_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_sure_delete"
            android:textSize="18sp"
            android:layout_marginHorizontal="16dp"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/v_middle"
            android:layout_width="1dp"
            android:layout_height="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_delete"
            style="@style/Widget.Custom.Button.Mini"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/text_delete"
            android:backgroundTint="@color/background_red"
            android:textColor="@color/text_red"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/v_middle" />

        <Button
            android:id="@+id/btn_cancel"
            style="@style/Widget.Custom.Button.Mini"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/background_gray"
            android:text="@string/text_cancel"
            android:textColor="@color/gray"
            app:layout_constraintEnd_toStartOf="@+id/v_middle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_delete" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>